<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="100"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Team_Preview"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <ScrollView
                android:id="@+id/sv1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/PointsScroller"
                android:background="?attr/colorOnSecondary"
                android:scrollbarStyle="insideOverlay">

                <LinearLayout
                    android:id="@+id/PointsLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spcScroller" />

            <TextView
                android:id="@+id/StaticTotalPoints1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TotalPoints"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/TotalPoints1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spcTotalpointswhite" />

            <Button
                android:id="@+id/Bonus1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/AddBonus"
                android:elevation="20dp"
                android:text="@string/AddBonus"
                android:textAlignment="center"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/remBonus1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remBonus" />

                <TextView
                    android:id="@+id/CurrentBonus1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currentBonus"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spcTotalpointswhite" />

            <Button
                android:id="@+id/Addpoints1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/AddBonus"
                android:text="@string/AddPoints"
                app:cornerRadius="20dp" />

        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="@dimen/divide"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Team_Preview"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <ScrollView
                android:id="@+id/sv2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/PointsScroller"
                android:background="?attr/colorOnSecondary">

                <LinearLayout
                    android:id="@+id/PointsLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spcScroller" />

            <TextView
                android:id="@+id/StaticTotalPoints2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TotalPoints"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/TotalPoints2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spcTotalpointswhite" />

            <Button
                android:id="@+id/Bonus2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/AddBonus"
                android:text="@string/AddBonus"
                app:cornerRadius="40dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/remBonus2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remBonus" />

                <TextView
                    android:id="@+id/CurrentBonus2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currentBonus"
                    android:textAlignment="center" />
            </LinearLayout>

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spcTotalpointswhite" />

            <Button
                android:id="@+id/Addpoints2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/AddBonus"
                android:text="@string/AddPoints" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/trump"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/trumpJack"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/trumpNine"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Ace"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Ten"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/King"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Queen"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Eight"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Seven"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Other" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Ace"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Ten"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/King"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Queen"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/otherJack"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/otherNine"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Eight"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tablePadding"
                android:text="@string/Seven"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

</LinearLayout>